2007-02-17  Akim Demaille  <akim.demaille@free.fr>

	Update uobject/
	* src/uobject.cc: Remove parts now factored in uobject-common.cc.

2007-02-15  Akim Demaille  <akim@lrde.epita.fr>

	Restore missing parens
	* src/uqueue.cc: Fix a bug reported by MN, introduced by myself
	in 501: the removal of important parens.

2007-02-15  Akim Demaille  <akim.demaille@free.fr>

	UCommand_ASSIGN_VALUE::execute_function_call
	* src/ucommand.hh, src/ucommand.cc (UFALLTHRU): New.
	(UCommand_ASSIGN_VALUE::execute_function_call): New.
	(UCommand_ASSIGN_VALUE::execute_): Use it.

2007-02-14  Akim Demaille  <akim.demaille@free.fr>

	Use &, not *
	* src/uobject.cc: to alias the ghost connection.

2007-02-14  Akim Demaille  <akim.demaille@free.fr>

	Cleaning
	* src/uobject.cc: Spaces, identifiers, scopes.

2007-02-14  Akim Demaille  <akim.demaille@free.fr>

	Respect the tradition
	* src/uobject.cc: For iterator names.

2007-02-14  Akim Demaille  <akim.demaille@free.fr>

	Process doc last
	* Makefile.am (SUBDIRS): here.

2007-02-14  Akim Demaille  <demaille@gostai.com>

	Query replace regexp:
	STREQ *(\(.*?\)->str(), *\([^)]*\)) -> *\1 == \2

2007-02-13  Akim Demaille  <akim.demaille@free.fr>

	Bug fix
	* src/uexpression.cc (UExpression::UExpression): Use t, not type,
	which is not yet defined.

2007-02-13  Akim Demaille  <akim.demaille@free.fr>

	Use operator== for UString
	* src/ucommand.cc: here.

2007-02-13  Akim Demaille  <demaille@gostai.com>

	Let UGroup own their memory
	* src/ugroup.hh, src/ugroup.cc (name): Now an UString.
	Remove the ctor taking char*.
	* src/ucommand.cc, src/uobject.cc:
	Adjust.

2007-02-13  Akim Demaille  <demaille@gostai.com>

	Pretend C++ support assignment operators
	* src/ustring.hh, src/ustring.cc (update): Remove.
	(operator=): New.
	* src/ucommand.cc, src/uconnection.cc, src/uexpression.cc,
	* src/userver.cc, src/uvariable.cc, src/uvariablename.cc:
	Use them.

2007-02-13  Akim Demaille  <demaille@gostai.com>

	/! Dangerous checkin