@@ -290,16 +290,6 @@ namespace urbi
   }
 
   // **************************************************************************
-  //! UObjectHub constructor.
-
-  UObjectHub::UObjectHub(const std::string& s) : name(s)
-  {
-  }
-
-  //! UObjectHub destructor.
-  UObjectHub::~UObjectHub()
-  {
-  }
 
   void
   UObjectHub::USetUpdate(ufloat t)
@@ -307,63 +297,6 @@ namespace urbi
     period = t;
     new UTimerCallbackobj<UObjectHub>(name, t, this,
 				      &UObjectHub::updateGlobal, updatemap);
-  }
-
-  int
-  UObjectHub::updateGlobal()
-  {
-    for (UObjectList::iterator i = members.begin();
-	 i != members.end();
-	 ++i)
-      (*i)->update();
-    update();
-    return 0;
-  }
-
-  void
-  UObjectHub::addMember(UObject* obj)
-  {
-    members.push_back(obj);
-  }
-
-  UObjectList*
-  UObjectHub::getSubClass(const std::string& subclass)
-  {
-    UObjectList* res = new UObjectList();
-    for (UObjectList::iterator i = members.begin();
-	 i != members.end();
-	 ++i)
-      if ((*i)->classname == subclass)
-	res->push_back(*i);
-
-    return res;
-  }
-
-
-  //! retrieve a UObjectHub based on its name
-  UObjectHub*
-  getUObjectHub(const std::string& name)
-  {
-    for (UStartlistHub::iterator i = objecthublist->begin();
-	 i != objecthublist->end();
-	 ++i)
-      if ((*i)->name == name)
-	return (*i)->getUObjectHub();
-
-    return 0;
-  }
-
-  //! retrieve a UObject based on its name
-  UObject*
-  getUObject(const std::string& name)
-  {
-    for (UStartlist::iterator i = objectlist->begin();
-	 i != objectlist->end();
-	 ++i)
-      if ((*i)->name == name)
-	return (*i)->getUObject();
-
-    return 0;
   }
 
   //! echo method
