@@ -1,5 +1,10 @@
 2007-02-17  Akim Demaille  <akim.demaille@free.fr>
 
+	uobject-hub-common.cc
+	* src/uobject.cc: Remove factored functions.
+
+2007-02-17  Akim Demaille  <akim.demaille@free.fr>
+
 	Update uobject/
 	* src/uobject.cc: Remove parts now factored in uobject-common.cc.
 
